# anabrute

./: BUGS.md  CLAUDE.md  CMakeLists.txt  IDEAS.md  README.md  TESTING.md  anabrute.c  anadecomp.c  anaheap.c  anaperm.c  anatypes.c  anatypes.h  avx_cruncher.c  avx_cruncher.h  avx_cruncher_avx512.c  bench_avx.c  bench_breakdown.c  bench_enum.c  common.h  constants.h  cpu_cruncher.c  cpu_cruncher.h  cruncher.h  dict.c  dict.h  fact.c  fact.h  gpu_cruncher.c  gpu_cruncher.h  hashes.c  hashes.h  input.dict  input.hashes  input.hashes.debug  kernel.c  kernel_debug.c  main.c  md5_avx2.h  md5_avx512.h  metal_cruncher.h  (+17 more)
docs/plans/: 2026-02-16-bug-fix-testing-design.md  2026-02-16-bug-fix-testing.md  2026-02-16-cruncher-abstraction-design.md  2026-02-16-cruncher-abstraction.md  2026-02-17-enumeration-parallelization-design.md  2026-02-17-enumeration-parallelization.md  2026-02-19-backend-selection-design.md  2026-02-19-backend-selection.md  2026-02-19-soa-key-layout-design.md  2026-02-19-soa-key-layout.md
kernels/: md5.cl  permut.cl  permut.metal  saxpy.cl
tests/: test_cpu_enumeration.c  test_cruncher.c  test_dict_parsing.c  test_hash_parsing.c
